--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "dompurify": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading": "^2.0.3",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
