--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
+    "@microlink/react": "^5.5.22",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,6 +23,7 @@
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "url": "^0.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
